SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

Improved handling of OpenEdge DB specifics.
  Thanks to Tinco van Engen for the patch.

Improved jumps to distinguished preferences sections utilizing
  the new Global Preferences and New Session Properties search.
  Currently used by:
  - Jump to query connection pool configuration.
  - Jump to change tracking preferences by right mouse clicking the SQL editor's left gutter.

SQL editor: Improvements of multiple caret/cursor editing:
 - Searching for next occurrence of selected text now works case insensitive.
 - Improved UI repaint behaviour.
 - Fixed positioning of new carets when added without selection.

The SQL editor allows multiple caret/cursor editing.
  alt+J adds a caret. alt+shift+J removes the last added caret.
  When some text is selected the next occurrence of the selected text will be added a caret.
  When no text is selected the next line will be added a caret at the same line position
  provided the line is long enough.
  Escape key or mouse click will remove all extra carets.

About dialog: Completed web links.

MS-Excel export of UI tables allows to include result coloring.
  See right mouse menu of UI tables --> "Export CSV / MS Excel / XML / JSON ..."
  The following colors will be saved:
   - User colored rows or cell, see tables right mouse menu
   - Find result coloring
   - Duplicates coloring
  Warning: For large tables coloring results in higher memory usage and slower export.

#608 SQL Parametrisation Plugin: The parameter value dialog now has a checkbox named "Hide value"
  which turns the value text field into a password field.

Made Aliases and Session popup menus accessible through
  - shortcuts alt shift A and alt shift S respectively
  - tools popup
